--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Title, decription, tagline and URL for your site
 # Can be used in your theme by calling 'site.title' and so on
 title: Field Book
-email: your-email@domain.com
+email: mlvirdi@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://mlvirdi.com" # the base hostname & protocol for your site
+twitter_username: akashwani
+github_username:  virdi
 
 tagline: blogs about design, technology, art
 
