including footer and modifying about template

--- a/_config.yml
+++ b/_config.yml
@@ -54,5 +54,4 @@ highlighter: true
 pages_list:       
   About: '/about'
   Archive: '/archive'
-  Contact: '/contact'
-  Feed: '/atom.xml'
+  Subscribe: '/atom.xml'
